<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:id="@+id/container"
    tools:context=".activities.Pagamento.Pagamento">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="20dp"
        android:gravity="center"
        android:text="@string/titulo_tela_pagamento"
        android:textAlignment="center"
        android:textColor="#0E0E0E"
        android:textSize="20sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/editBairro"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="20dp"
        android:hint="@string/hint_bairro"
        android:maxLines="1"
        android:inputType="text"
        android:padding="12dp"/>

    <EditText
        android:id="@+id/editRuaNumero"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="20dp"
        android:hint="@string/hint_rua"
        android:maxLines="1"
        android:inputType="text"
        android:padding="12dp"/>

    <EditText
        android:id="@+id/editCidadeEstado"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="20dp"
        android:hint="@string/hint_cidade_estado"
        android:maxLines="1"
        android:inputType="text"
        android:padding="12dp"/>

    <EditText
        android:id="@+id/editCelular"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="20dp"
        android:hint="@string/hint_celular"
        android:maxLines="1"
        android:inputType="phone"
        android:padding="12dp"/>

    <Button
        android:id="@+id/btfazerPagamento"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="15dp"
        android:layout_marginTop="15dp"
        android:padding="15dp"
        android:text="@string/texto_botão_pagamento"
        android:textAllCaps="false"
        android:textSize="15dp"
        android:textStyle="bold" />



</LinearLayout>